--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,18 @@
 		<fuse.version>6.2.1.redhat-169</fuse.version>
 		<fabric8.version>2.2.0.redhat-085</fabric8.version>
 		<fabric8-maven-plugin.version>${fabric8.version}</fabric8-maven-plugin.version>
-		<docker-maven-plugin.version>0.13.6</docker-maven-plugin.version>
+		<docker-maven-plugin.version>0.19.0.fuse-000003</docker-maven-plugin.version>
 		<karaf-maven-plugin.version>4.0.2.redhat-621085</karaf-maven-plugin.version>
 		<maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
 		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
 		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
 		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
 
-		<docker.from>jboss-fuse-6/fis-karaf-openshift:1.0</docker.from>
-		<fabric8.dockerUser>fabric8/</fabric8.dockerUser>
-		<docker.image>${fabric8.dockerUser}quickstart-karaf-camellog:${project.version}</docker.image>
+		<docker.pullRegistry>registry.access.redhat.com</docker.pullRegistry>
+		<docker.pushRegistry>192.168.56.101:8443</docker.pushRegistry>
+		<docker.fromImage>jboss-fuse-6/fis-karaf-openshift:1.0</docker.fromImage>
+		<openshift.project.name>fis-openshift-fabric8-maven</openshift.project.name>
+		<docker.toImage>${openshift.project.name}/fis-openshift-fabric8-maven-karaf-camel-qs:${project.version}</docker.toImage>
 		<docker.assemblyDescriptor>${basedir}/src/main/fabric8/assembly.xml</docker.assemblyDescriptor>
 		<docker.port.container.jolokia>8778</docker.port.container.jolokia>
 		<docker.port.container.http>8181</docker.port.container.http>
@@ -140,11 +142,8 @@
 						</goals>
 						<configuration>
 							<artifacts>
-								<!-- <artifact>
-									<file>${project.build.outputDirectory}/features.xml</file>
-									<classifier>features</classifier>
-									<type>xml</type>
-								</artifact> -->
+								<!-- <artifact> <file>${project.build.outputDirectory}/features.xml</file> 
+									<classifier>features</classifier> <type>xml</type> </artifact> -->
 							</artifacts>
 						</configuration>
 					</execution>
@@ -211,15 +210,18 @@
 
 			<!-- 3. Create Docker Image -->
 			<plugin>
-				<groupId>org.jolokia</groupId>
+				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>${docker-maven-plugin.version}</version>
 				<configuration>
+					<!-- <registry>${docker.pullRegistry}</registry> -->
+					<pullRegistry>${docker.pullRegistry}</pullRegistry>
+					<pushRegistry>${docker.pushRegistry}</pushRegistry>
 					<images>
 						<image>
-							<name>${docker.image}</name>
+							<name>${docker.toImage}</name>
 							<build>
-								<from>${docker.from}</from>
+								<from>${docker.fromImage}</from>
 								<assembly>
 									<basedir>/deployments</basedir>
 									<user>jboss:jboss:jboss</user>
