--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
 
 		<docker.from>jboss-fuse-6/fis-karaf-openshift:1.0</docker.from>
-		<fabric8.dockerUser>fabric8/</fabric8.dockerUser>
-		<docker.image>${fabric8.dockerUser}quickstart-karaf-camellog:${project.version}</docker.image>
+		<openshift.project.name>fis-openshift-fabric8-maven</openshift.project.name>
+		<docker.image>${openshift.project.name}/fis-openshift-fabric8-maven-karaf-camel-qs:${project.version}</docker.image>
 		<docker.assemblyDescriptor>${basedir}/src/main/fabric8/assembly.xml</docker.assemblyDescriptor>
 		<docker.port.container.jolokia>8778</docker.port.container.jolokia>
 		<docker.port.container.http>8181</docker.port.container.http>
@@ -218,6 +218,8 @@
 					<images>
 						<image>
 							<name>${docker.image}</name>
+							<pullRegistry>registry.access.redhat.com</pullRegistry>
+							<!-- <pushRegistry>192.168.56.101:8443</pushRegistry> -->
 							<build>
 								<from>${docker.from}</from>
 								<assembly>
